src/snapshots/pbsql__object_name_replacer__tests__select_unreplaced_identifier.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Err: "Unknown table reference: x"
