src/snapshots/pbsql__object_name_replacer__tests__select_wildcard.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Err: "sql parser error: Expected close delimiter '\"' before EOF. at Line: 1, Column 37"
