src/snapshots/pbsql__object_name_replacer__tests__subquery.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - SELECT
    - "    loserId, winnerId"
    - "FROM \"~/books/matches\""
    - WHERE loserId IN (
    - "    SELECT thingId"
    - "    FROM \"~/books/eloScores\""
    - "    ORDER BY score DESC, thingId DESC"
    - "    LIMIT 15"
    - )
  names_to_replace:
    indices_to_replace: {}
    relations_to_replace:
      ? - ~/books/eloScores
      : - super
        - scores
        - tbl
      ? - ~/books/matches
      : - my_books
        - tbl
  output_query:
    - SELECT
    - "  loserId,"
    - "  winnerId"
    - FROM
    - "  my_books.tbl"
    - WHERE
    - "  loserId IN ("
    - "    SELECT"
    - "      thingId"
    - "    FROM"
    - "      super.scores.tbl"
    - "    ORDER BY"
    - "      score DESC,"
    - "      thingId DESC"
    - "    LIMIT"
    - "      15"
    - "  )"
  output_ast:
    - Query:
        with: ~
        body:
          Select:
            distinct: ~
            top: ~
            projection:
              - UnnamedExpr:
                  Identifier:
                    value: loserId
                    quote_style: ~
              - UnnamedExpr:
                  Identifier:
                    value: winnerId
                    quote_style: ~
            into: ~
            from:
              - relation:
                  Table:
                    name:
                      - value: my_books
                        quote_style: ~
                      - value: tbl
                        quote_style: ~
                    alias: ~
                    args: ~
                    with_hints: []
                    version: ~
                    partitions: []
                joins: []
            lateral_views: []
            selection:
              InSubquery:
                expr:
                  Identifier:
                    value: loserId
                    quote_style: ~
                subquery:
                  with: ~
                  body:
                    Select:
                      distinct: ~
                      top: ~
                      projection:
                        - UnnamedExpr:
                            Identifier:
                              value: thingId
                              quote_style: ~
                      into: ~
                      from:
                        - relation:
                            Table:
                              name:
                                - value: super
                                  quote_style: ~
                                - value: scores
                                  quote_style: ~
                                - value: tbl
                                  quote_style: ~
                              alias: ~
                              args: ~
                              with_hints: []
                              version: ~
                              partitions: []
                          joins: []
                      lateral_views: []
                      selection: ~
                      group_by:
                        Expressions: []
                      cluster_by: []
                      distribute_by: []
                      sort_by: []
                      having: ~
                      named_window: []
                      qualify: ~
                  order_by:
                    - expr:
                        Identifier:
                          value: score
                          quote_style: ~
                      asc: false
                      nulls_first: ~
                    - expr:
                        Identifier:
                          value: thingId
                          quote_style: ~
                      asc: false
                      nulls_first: ~
                  limit:
                    Value:
                      Number:
                        - "15"
                        - false
                  limit_by: []
                  offset: ~
                  fetch: ~
                  locks: []
                  for_clause: ~
                negated: false
            group_by:
              Expressions: []
            cluster_by: []
            distribute_by: []
            sort_by: []
            having: ~
            named_window: []
            qualify: ~
        order_by: []
        limit: ~
        limit_by: []
        offset: ~
        fetch: ~
        locks: []
        for_clause: ~
