src/snapshots/pbsql__object_name_replacer__tests__union_in_subquery.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - SELECT
    - "    sq.id, sq.num_matches"
    - FROM (
    - "    SELECT books.id, 0 AS \"num_matches\""
    - "    FROM \"~/books/things\" AS \"books\""
    - "    LEFT JOIN \"~/books/matches\" AS \"matches\""
    - "    ON ("
    - "        books.id = matches.winner_id"
    - "        OR books.id = matches.loser_id"
    - "    )"
    - "    WHERE matches.loser_id IS NULL"
    - ""
    - "    UNION ALL"
    - ""
    - "    SELECT winner_id AS \"id\", 1 AS \"num_matches\""
    - "    FROM \"~/books/matches\""
    - ""
    - "    UNION ALL"
    - ""
    - "    SELECT loser_id AS \"id\", 1 AS \"num_matches\""
    - "    FROM \"~/books/matches\""
    - ") AS \"sq\""
    - GROUP BY sq.id
    - ORDER BY sum(sq.num_matches) ASC
    - LIMIT ?
  names_to_replace:
    ? - ~/books/matches
    : - my_books
      - matches
    ? - ~/books/things
    : - my_books
      - tbl
  output_query:
    - SELECT
    - "  \"sq\".id,"
    - "  \"sq\".num_matches"
    - FROM
    - "  ("
    - "    SELECT"
    - "      \"books\".id,"
    - "      0 AS \"num_matches\""
    - "    FROM"
    - "      my_books.tbl AS \"books\""
    - "      LEFT JOIN my_books.matches AS \"matches\" ON ("
    - "        \"books\".id = \"matches\".winner_id"
    - "        OR \"books\".id = \"matches\".loser_id"
    - "      )"
    - "    WHERE"
    - "      \"matches\".loser_id IS NULL"
    - "    UNION"
    - "    ALL"
    - "    SELECT"
    - "      winner_id AS \"id\","
    - "      1 AS \"num_matches\""
    - "    FROM"
    - "      my_books.matches"
    - "    UNION"
    - "    ALL"
    - "    SELECT"
    - "      loser_id AS \"id\","
    - "      1 AS \"num_matches\""
    - "    FROM"
    - "      my_books.matches"
    - "  ) AS \"sq\""
    - GROUP BY
    - "  \"sq\".id"
    - ORDER BY
    - "  sum(\"sq\".num_matches) ASC"
    - LIMIT
    - "  ?"
  output_ast:
    - Query:
        with: ~
        body:
          Select:
            distinct: ~
            top: ~
            projection:
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: sq
                      quote_style: "\""
                    - value: id
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: sq
                      quote_style: "\""
                    - value: num_matches
                      quote_style: ~
            into: ~
            from:
              - relation:
                  Derived:
                    lateral: false
                    subquery:
                      with: ~
                      body:
                        SetOperation:
                          op: Union
                          set_quantifier: All
                          left:
                            SetOperation:
                              op: Union
                              set_quantifier: All
                              left:
                                Select:
                                  distinct: ~
                                  top: ~
                                  projection:
                                    - UnnamedExpr:
                                        CompoundIdentifier:
                                          - value: books
                                            quote_style: "\""
                                          - value: id
                                            quote_style: ~
                                    - ExprWithAlias:
                                        expr:
                                          Value:
                                            Number:
                                              - "0"
                                              - false
                                        alias:
                                          value: num_matches
                                          quote_style: "\""
                                  into: ~
                                  from:
                                    - relation:
                                        Table:
                                          name:
                                            - value: my_books
                                              quote_style: ~
                                            - value: tbl
                                              quote_style: ~
                                          alias:
                                            name:
                                              value: books
                                              quote_style: "\""
                                            columns: []
                                          args: ~
                                          with_hints: []
                                          version: ~
                                          partitions: []
                                      joins:
                                        - relation:
                                            Table:
                                              name:
                                                - value: my_books
                                                  quote_style: ~
                                                - value: matches
                                                  quote_style: ~
                                              alias:
                                                name:
                                                  value: matches
                                                  quote_style: "\""
                                                columns: []
                                              args: ~
                                              with_hints: []
                                              version: ~
                                              partitions: []
                                          join_operator:
                                            LeftOuter:
                                              "On":
                                                Nested:
                                                  BinaryOp:
                                                    left:
                                                      BinaryOp:
                                                        left:
                                                          CompoundIdentifier:
                                                            - value: books
                                                              quote_style: "\""
                                                            - value: id
                                                              quote_style: ~
                                                        op: Eq
                                                        right:
                                                          CompoundIdentifier:
                                                            - value: matches
                                                              quote_style: "\""
                                                            - value: winner_id
                                                              quote_style: ~
                                                    op: Or
                                                    right:
                                                      BinaryOp:
                                                        left:
                                                          CompoundIdentifier:
                                                            - value: books
                                                              quote_style: "\""
                                                            - value: id
                                                              quote_style: ~
                                                        op: Eq
                                                        right:
                                                          CompoundIdentifier:
                                                            - value: matches
                                                              quote_style: "\""
                                                            - value: loser_id
                                                              quote_style: ~
                                  lateral_views: []
                                  selection:
                                    IsNull:
                                      CompoundIdentifier:
                                        - value: matches
                                          quote_style: "\""
                                        - value: loser_id
                                          quote_style: ~
                                  group_by:
                                    Expressions: []
                                  cluster_by: []
                                  distribute_by: []
                                  sort_by: []
                                  having: ~
                                  named_window: []
                                  qualify: ~
                              right:
                                Select:
                                  distinct: ~
                                  top: ~
                                  projection:
                                    - ExprWithAlias:
                                        expr:
                                          Identifier:
                                            value: winner_id
                                            quote_style: ~
                                        alias:
                                          value: id
                                          quote_style: "\""
                                    - ExprWithAlias:
                                        expr:
                                          Value:
                                            Number:
                                              - "1"
                                              - false
                                        alias:
                                          value: num_matches
                                          quote_style: "\""
                                  into: ~
                                  from:
                                    - relation:
                                        Table:
                                          name:
                                            - value: my_books
                                              quote_style: ~
                                            - value: matches
                                              quote_style: ~
                                          alias: ~
                                          args: ~
                                          with_hints: []
                                          version: ~
                                          partitions: []
                                      joins: []
                                  lateral_views: []
                                  selection: ~
                                  group_by:
                                    Expressions: []
                                  cluster_by: []
                                  distribute_by: []
                                  sort_by: []
                                  having: ~
                                  named_window: []
                                  qualify: ~
                          right:
                            Select:
                              distinct: ~
                              top: ~
                              projection:
                                - ExprWithAlias:
                                    expr:
                                      Identifier:
                                        value: loser_id
                                        quote_style: ~
                                    alias:
                                      value: id
                                      quote_style: "\""
                                - ExprWithAlias:
                                    expr:
                                      Value:
                                        Number:
                                          - "1"
                                          - false
                                    alias:
                                      value: num_matches
                                      quote_style: "\""
                              into: ~
                              from:
                                - relation:
                                    Table:
                                      name:
                                        - value: my_books
                                          quote_style: ~
                                        - value: matches
                                          quote_style: ~
                                      alias: ~
                                      args: ~
                                      with_hints: []
                                      version: ~
                                      partitions: []
                                  joins: []
                              lateral_views: []
                              selection: ~
                              group_by:
                                Expressions: []
                              cluster_by: []
                              distribute_by: []
                              sort_by: []
                              having: ~
                              named_window: []
                              qualify: ~
                      order_by: []
                      limit: ~
                      limit_by: []
                      offset: ~
                      fetch: ~
                      locks: []
                      for_clause: ~
                    alias:
                      name:
                        value: sq
                        quote_style: "\""
                      columns: []
                joins: []
            lateral_views: []
            selection: ~
            group_by:
              Expressions:
                - CompoundIdentifier:
                    - value: sq
                      quote_style: "\""
                    - value: id
                      quote_style: ~
            cluster_by: []
            distribute_by: []
            sort_by: []
            having: ~
            named_window: []
            qualify: ~
        order_by:
          - expr:
              Function:
                name:
                  - value: sum
                    quote_style: ~
                args:
                  - Unnamed:
                      Expr:
                        CompoundIdentifier:
                          - value: sq
                            quote_style: "\""
                          - value: num_matches
                            quote_style: ~
                filter: ~
                null_treatment: ~
                over: ~
                distinct: false
                special: false
                order_by: []
            asc: true
            nulls_first: ~
        limit:
          Value:
            Placeholder: "?"
        limit_by: []
        offset: ~
        fetch: ~
        locks: []
        for_clause: ~
