src/snapshots/pbsql__object_name_replacer__tests__unsupported_function.snap
---
source: src/object_name_replacer.rs
expression: result
---
Ok:
  original_query:
    - SELECT badfunc()
  names_to_replace:
    ? - ~/books/eloScores
    : - my_books
      - tbl
  output_query:
    - SELECT
    - "  badfunc()"
  output_ast:
    - Query:
        with: ~
        body:
          Select:
            distinct: ~
            top: ~
            projection:
              - UnnamedExpr:
                  Function:
                    name:
                      - value: badfunc
                        quote_style: ~
                    args: []
                    filter: ~
                    null_treatment: ~
                    over: ~
                    distinct: false
                    special: false
                    order_by: []
            into: ~
            from: []
            lateral_views: []
            selection: ~
            group_by:
              Expressions: []
            cluster_by: []
            distribute_by: []
            sort_by: []
            having: ~
            named_window: []
            qualify: ~
        order_by: []
        limit: ~
        limit_by: []
        offset: ~
        fetch: ~
        locks: []
        for_clause: ~
