src/snapshots/pbsql__object_name_replacer__tests__unsupported_statement_type.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Err: "not implemented: Statement::Close"
