src/snapshots/pbsql__object_name_replacer__tests__update.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - "UPDATE \"~/books/eloScores\" SET \"score\" = ? WHERE \"thingId\" = ?"
  names_to_replace:
    ? - ~/books/eloScores
    : - my_books
      - tbl
  output_query:
    - UPDATE
    - "  my_books.tbl"
    - SET
    - "  \"score\" = ?"
    - WHERE
    - "  \"thingId\" = ?"
  output_ast:
    - Update:
        table:
          relation:
            Table:
              name:
                - value: my_books
                  quote_style: ~
                - value: tbl
                  quote_style: ~
              alias: ~
              args: ~
              with_hints: []
              version: ~
              partitions: []
          joins: []
        assignments:
          - id:
              - value: score
                quote_style: "\""
            value:
              Value:
                Placeholder: "?"
        from: ~
        selection:
          BinaryOp:
            left:
              Identifier:
                value: thingId
                quote_style: "\""
            op: Eq
            right:
              Value:
                Placeholder: "?"
        returning: ~
